<resources>
    <string name="vincles_app_name">Vincles BCN</string>
    <string name="action_settings">Ajust</string>
    <string name="language">Idioma</string>
    <string name="locale_language">ca</string>
    <string name="locale_country">ES</string>
    <string name="spanish">Castellà</string>
    <string name="catalan">Català</string>
    <string name="join_xarxa">Unir-me a la xarxa</string>
    <string name="keep_on">Continuar</string>
    <string name="error">Error!</string>
    <string name="cancel">Cancel·lar</string>
    <string name="accept">Acceptar</string>
    <string name="login">Entrar</string>
    <string name="newuser">Nou usuari</string>
    <string name="password">Contrasenya</string>
    <string name="newpassword">Nova contrasenya</string>
    <string name="oldpassword">Contrasenya actual</string>
    <string name="repeatpassword">Repeteix la contrasenya</string>
    <string name="changepassword">Canviar contrasenya</string>
    <string name="passwordrecovery">Recuperar contrasenya</string>
    <string name="migrate_user">Realitzar la migració</string>
    <string name="no">No</string>
    <string name="yes">Sí</string>
    <string name="personal_data">Dades personals</string>
    <string name="email_register">* Correu electrònic</string>
    <string name="email_register_repeat">* Repeteix correu electrònic</string>
    <string name="password_register">* Contrasenya</string>
    <string name="passwordrepeat_register">* Repeteix la contrasenya</string>
    <string name="first_name">* Nom</string>
    <string name="last_name">* Cognoms</string>
    <string name="birthdate">* Data de naixement</string>
    <string name="email">Correu electrònic</string>
    <string name="phone">* Telèfon</string>
    <string name="home_bcn">* Vius a Barcelona?</string>
    <string name="change_photo">Canviar foto</string>
    <string name="save">Guardar</string>
    <string name="dateformat">dd/MM/yyyy</string>
    <string name="datetimeformat">dd/MM/yyyy \'a les\' HH:mm \'h.\'</string>
    <string name="dateLargeformat">EEEE, dd \'de\' MMMM \'de\' yyyy</string>
    <string name="dateSmallformat">EEEE d MMMM</string>
    <string name="timeformat">HH:mm</string>
    <string name="close">Tancar</string>
    <string-array name="dayList">
        <item>Dia</item>
        <item>Dilluns</item>
        <item>Dimarts</item>
        <item>Dimecres</item>
        <item>Dijous</item>
        <item>Divendres</item>
        <item>Dissabte</item>
        <item>Diumenge</item>
    </string-array>
    <string name="year">Any</string>
    <string-array name="monthList">
        <item>Mes</item>
        <item>Gener</item>
        <item>Febrer</item>
        <item>Març</item>
        <item>Abril</item>
        <item>Maig</item>
        <item>Juny</item>
        <item>Juliol</item>
        <item>Agost</item>
        <item>Setembre</item>
        <item>Octubre</item>
        <item>Novembre</item>
        <item>Desembre</item>
    </string-array>
    <string name="day">Dia</string>
    <string name="hour">Hora</string>
    <string name="minute">Minut</string>
    <string name="days">Dies</string>
    <string name="hours">Hores</string>
    <string name="minutes">Minuts</string>
    <string name="duration">Durada</string>
    <string name="back">Tornar</string>
    <string name="male">Home</string>
    <string name="female">Dona</string>
    <string name="register">Registrar-me</string>
    <string name="gender">* Gènere</string>
    <string name="take_photo">* La teva foto</string>
    <string name="add_new_user">afegir nou usuari de xarxa</string>
    <string name="notification_unlinked_title">Desvinculat d\'una xarxa</string>
    <string name="notification_unlinked_text">T\'han desvinculat de la xarxa de %1$s</string>
    <string name="success_operation">Operació realitzada amb èxit</string>
    <string name="error_no_vincles_user">No tens usuaris de xarxa</string>
    <string name="no_users">sense xarxes</string>
    <string name="error_invalid_date">Data no vàlida</string>
    <string name="error_empty_desc">Descripció obligatòria</string>
    <string name="error_empty_field">Text obligatori</string>
    <string name="error_empty_code">Codi obligatori</string>
    <string name="error_mandatory_field">Camp obligatori</string>
    <string name="error_phone_numbers">El format del telèfon no és vàlid (ex. 123456789)</string>
    <string name="error_invalid_email">El format del correu és incorrecte (ex. correu@correu.com)</string>
    <string name="error_passwords_repeat">Les contrasenyes no coincideixen, o tenen menys de 8 caràcters o més de 16</string>
    <string name="error_email_repeat">Els correus electrònics no coincideixen</string>
    <string name="error_old_passwords">La contrasenya actual es incorrecte</string>
    <string name="error_used_email">Correu electrònic ja en ús</string>
    <string name="error_empty_photo">Foto obligatòria</string>
    <string name="error_messsage_load_list">No s\'ha pogut carregar el llistat de missatges, si us plau, intenta-ho més tard</string>
    <string name="error_task_load_list">No s\'ha pogut carregar el llistat de cites, si us plau, intenta-ho més tard</string>
    <string name="error_cancel">L\'usuari ha cancel·lat l\'operació</string>
    <string name="error_start_video_calling">No es pot realitzar la trucada, si us plau, torni a intentar-ho més tard (codi=%d)</string>
    <string name="error_while_video_calling">S\'ha tallat la trucada, si us plau, torni a intentar-ho més tard (codi=%d)</string>
    <string name="error_photo_update_title">Error</string>
    <string name="error_photo_update_info">No s\'ha pogut descarregar la seva foto de perfil. La pot actualitzar a la configuració.</string>
    <string name="error_default">S\'ha produït un error</string>
    <string name="error_connection">Error de connexió</string>
    <string name="error_server">No és possible connectar amb el servidor, si us plau, intenta-ho més tard</string>
    <string name="error_1300">Codi incorrecte</string>
    <string name="error_login">Usuari o contrasenya incorrectes</string>
    <string name="error_1321">L\'usuari ja està en cercle</string>
    <string name="error_1606">Només l\'usuari receptor pot marcar el missatge com vist</string>
    <string name="error_1908">L\'usuari no pot actualitzar aquest esdeveniment</string>
    <string name="error_2701">Codi incorrecte</string>
    <string name="error_1110">Aquest email ja està associat a un usuari</string>
    <string name="error_1501">No es pot eliminar el contingut, perquè no s\'ha trobat a la galeria del servidor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_close_dialog_title">Sortir</string>
    <string name="app_close_dialog_msg">Segur que vols sortir de Vincles BCN?</string>
    <string name="app_version">Versió de l\'aplicació: </string>
    <string name="title_activity_home">Inici</string>
    <string name="title_activity_network">Xarxes</string>
    <string name="title_activity_video_call">Vídeo-trucada</string>
    <string name="title_activity_message">Missatges</string>
    <string name="title_activity_task">Agenda</string>
    <string name="title_activity_notes">Notes</string>
    <string name="title_activity_configuration">Configuració</string>
    <string name="title_activity_tour">Tour</string>
    <string name="title_activity_about">Sobre Vincles BCN</string>
    <string name="title_activity_logout">Sortir</string>
    <string name="title_activity_diary">Agenda</string>
    <string name="registration_language">* Idioma de l\'app Vincles BCN</string>
    <string name="registration_disclaimer_title">Termes i condicions Vincles BCN</string>
    <string name="registration_home">* Vius a Barcelona?</string>
    <string name="joint_no_tinc_codi">No tinc codi</string>
    <string name="join_tornar">Tornar</string>
    <string name="registration_process">Processant registre..\nSi us plau, esperi uns segons.</string>
    <string name="snackbar_process">Processant petició..\nSi us plau, esperi uns segons.</string>
    <string name="error_register">Els camps nom, primer cognom, segon cognom, data de naixement, telèfon, gènere, foto i si vius a Barcelona són obligatoris.</string>
    <string name="verify">Validar</string>
    <string name="resend_email">Reenviar email</string>
    <string name="email_sent">Mail enviat al email associat</string>
    <string name="validate_key">Clau de validació:</string>
    <string name="validate_info">Si us plau, introdueix en el següent camp el codi que has rebut per email per tal de validar el teu usuari.</string>
    <string name="migrate_info">Per motius tècnics, aquesta aplicació necessita migrar a un nou sistema tecnològic.\nPer continuar fent ús d\'aquesta aplicació completa els camps inferiors per fer aquesta migració.\nDisculpa les molèsties.</string>
    <string name="migrate_ok">Migració finalitzada</string>
    <string name="migrate_hint">Dades necessàries per realitzar la migració</string>
    <string name="migrate_success">El procés ha finalitzat satisfactòriament. Ara hauràs de validar el teu correu electrònic i podràs continuar utilitzant l\'aplicació.</string>
    <string name="recover_pass_title">Recuperar contrasenya</string>
    <string name="recover_pass_success">Hem enviat un mail amb instruccions del process per recuperar la seva contrasenya, si us plau revisa el teu correu electronic per completar el process.</string>
    <string name="reset_register_process_title">Torna a Login</string>
    <string name="reset_register_process_info">Si continua i torna a la pantalla de login les dades de creació d\'usuari es perdràn. Està segur?</string>
    <string name="signout_title">Tanca sessió</string>
    <string name="signout_info">Segur que vol tancar la sessió?</string>
    <string name="join_message">Introdueix el codi que t\'ha donat el teu familiar o amic.</string>
    <string name="join_message_last">No tens cap xarxa assignada. Per poder seguir utilitzant l\'aplicació Vincles cal que t\'uneixis a una xarxa.</string>
    <string name="join_code">Codi de xarxa</string>
    <string name="join_message_success_title">Benvingut %1$s, t\'has incorporat a la xarxa de %2$s</string>
    <string name="join_message_success_subtitle">Ja esteu connectats a través de Vincles BCN</string>
    <string name="join_message_error">El codi introduït no pertany a cap xarxa o ha caducat. Si us plau, torna a demanar un codi.</string>
    <string-array name="join_relationship_pos">
        <item name="RELATION">Relació de parentiu</item>
        <item name="PARTNER">Parella</item>
        <item name="CHILD">Fill/a</item>
        <item name="GRANDCHILD">Nét/a</item>
        <item name="OTHER">Altres</item>
        <item name="FRIEND">Amic/ga</item>
        <item name="VOLUNTEER">Voluntari/a</item>
        <item name="CAREGIVER">Cuidador/a</item>
        <item name="SIBLING">Germà/na</item>
        <item name="NEPHEW">Nebot/da</item>
    </string-array>
    <string name="error_codi_xarxa">Els camps codi de xarxa i relació de parentiu són obligatoris.</string>
    <string name="error_codi">Vincles és un servei per a persones gran i els seus familiars i amics. La persona gran et convidarà a formar part de la seva xarxa i et donarà un codi de xarxa. El codi és imprescindible per activar l\'app Vincles BCN.</string>
    <string name="task_link_new">Nova xarxa</string>
    <string name="task_link_select">Si us plau, selecciona una xarxa</string>
    <string name="task_videocall_call">Trucar</string>
    <string name="task_videocall_callagain">Trucar de nou</string>
    <string name="error_update">Els camps nom, cognoms, telèfon i si vius a Barcelona són obligatoris.</string>
    <string name="tour_home_menu">Prem aquí per veure el menú d\'opcions.</string>
    <string name="tour_home_video">Accés ràpid a vídeo-trucada.</string>
</resources>