<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80000000"
    android:clickable="false"
    android:padding="16dp">

    <ImageView
        android:src="@drawable/arrow_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView3"
        android:layout_alignParentTop="false"
        android:layout_marginTop="50dp" />

    <cat.bcn.vincles.lib.widget.AkkuratTextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/tour_home_menu"
        style="@style/TextDefault"
        android:layout_below="@+id/imageView3"
        android:layout_alignParentStart="true"
        android:textColor="#FFFFFF"
        android:layout_marginTop="10dp" />

    <ImageView
        android:src="@drawable/arrow_instructions_long"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:id="@+id/imageView2"
        android:layout_marginTop="50dp" />

    <cat.bcn.vincles.lib.widget.AkkuratTextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/tour_home_video"
        style="@style/TextDefault"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:textAlignment="gravity"
        android:gravity="right" />

    <cat.bcn.vincles.mobile.widget.AkkuratButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:onClick="closeTour"
        style="@style/ButtonBlack"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="true" />
</RelativeLayout>
