<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_content"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/vinclesbcn"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_gravity="center_horizontal"
        />

    <include layout="@layout/hrule" />



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin"
        android:layout_weight="1"
        android:layout_gravity="center"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="@dimen/padding_medium"
            >

            <!--style="@style/TextDefault"-->
            <cat.bcn.vincles.lib.widget.AkkuratTextView
                android:id="@+id/migrate_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_small"
                android:text="@string/migrate_hint"
                android:onClick="migrateInfo"
                />

            <cat.bcn.vincles.lib.widget.AkkuratTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_small"
                style="@style/TextDefault"
                android:text="@string/email_register"
                />

            <cat.bcn.vincles.mobile.widget.AkkuratEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_small"
                android:textCursorDrawable="@null"
                android:background="@drawable/edittext_background_def"
                android:id="@+id/ediEmail"
                />

            <cat.bcn.vincles.lib.widget.AkkuratTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_small"
                style="@style/TextDefault"
                android:text="@string/email_register_repeat"
                />

            <cat.bcn.vincles.mobile.widget.AkkuratEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_small"
                android:textCursorDrawable="@null"
                android:background="@drawable/edittext_background_def"
                android:id="@+id/ediEmailRepeat"
                />

            <cat.bcn.vincles.lib.widget.AkkuratTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_small"
                style="@style/TextDefault"
                android:text="@string/password_register"
                />

            <cat.bcn.vincles.mobile.widget.AkkuratEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_small"
                android:textCursorDrawable="@null"
                android:inputType="textPassword"
                android:background="@drawable/edittext_background_def"
                android:id="@+id/ediPassword"
                />

            <cat.bcn.vincles.lib.widget.AkkuratTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_small"
                style="@style/TextDefault"
                android:text="@string/passwordrepeat_register"
                />

            <cat.bcn.vincles.mobile.widget.AkkuratEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_small"
                android:textCursorDrawable="@null"
                android:inputType="textPassword"
                android:background="@drawable/edittext_background_def"
                android:id="@+id/ediPasswordRepeat"
                />

        </LinearLayout>


    </ScrollView>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/edittext_border"
        android:padding="@dimen/padding_small"
        android:gravity="center_horizontal">

        <LinearLayout
            android:id="@+id/migrate_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:clickable="true"
            style="@style/ButtonRed"
            android:onClick="migrateUser"
            android:padding="@dimen/padding_medium"
            >
            <!--<cat.bcn.vincles.lib.widget.TintableImageView-->
                <!--android:layout_width="@dimen/menu_header_size_icon"-->
                <!--android:layout_height="@dimen/menu_header_size_icon"-->
                <!--android:src="@drawable/icon_aceptar"-->
                <!--android:clickable="false"-->
                <!--app:tint="@color/white"/>-->
            <cat.bcn.vincles.lib.widget.AkkuratTextView
                android:paddingLeft="@dimen/padding_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:text="@string/migrate_user"
                android:textSize="@dimen/menu_text_size_net"
                android:textColor="@color/white"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>